# S_Support_Rings

./: Cargo.toml  README.md  rcsd_acall.patched.txt  rcsd_acall.patched.txt.bak  rcsd_acall.source.txt
S_SupportRings/S-SupportRings/: addRings.lua  libs_support_rings.nro
S_SupportRings/S-SupportRings/patches/msbt/message/us/usen/: bondsring.txt
S_SupportRings/S-SupportRings/patches/xml/: Params.xml  Ring.xml
S_SupportRingsParent/SupportRingsMod/: libs_support_rings.nro
plugin/: Cargo.toml
plugin/src/: lib.rs
src/: lib.rs
